Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-56187
tst_WaylandClient::touchDrag is flaky
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
Not Evaluated
Fix Version/s:
5.6.3
,
5.7.1
,
5.8.0
Affects Version/s:
5.8.0 Alpha
Component/s:
QPA: Wayland
Labels:
None
Description
The test sometimes segfaults.
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
qtbug-56187.txt
21 kB
26 Sep '16 13:26
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Johan Helsing
Reporter:
Johan Helsing
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
26 Sep '16 13:25
Updated:
27 Nov '18 14:08
Resolved:
27 Nov '18 14:08
Gerrit Reviews
There are no open Gerrit changes
Show
There are 6 closed Gerrit changes
Hide
There are 6 closed Gerrit changes
Client: Remove windows from keyboard focus list when destroyed
Gerrit Review:
Client: Fix touch getting stuck after drag-and-drop
Gerrit Review:
Client: Cleanup mouse state after drag
Gerrit Review:
Client: Remove windows from keyboard focus list when destroyed
Gerrit Review:
Client: Remove windows from keyboard focus list when destroyed
Gerrit Review:
Client: Remove windows from keyboard focus list when destroyed
Gerrit Review: